--- a/main/GAIA.css
+++ b/main/GAIA.css
@@ -56,8 +56,7 @@ body::before {
 
 
 .nav-item img:hover {
-    top: -100px;
-    width: 180px;
+    transform: scale(0.9);
     opacity: 0.8;
     z-index: 200; /* Higher than preview */
 }
@@ -433,12 +432,21 @@ iframe {
 /* Modal Content */
 .modal-content {
   background: white;
-  width: 50%;
+  width: 80%;
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
   position: relative;
+  overflow-y: auto;
+  max-height: 80vh; /* Adjust as needed */
 }
+
+/* Centering the Heading */
+.modal-content h2 {
+  text-align: center;
+  margin-bottom: 15px;
+}
+
 
 /* Close Button */
 .close {
@@ -599,7 +607,6 @@ h2 {
   display: none;
   position: flex;
   overflow-y: auto;
-  
 }
 
 /* Table Styling */
@@ -673,9 +680,9 @@ button.delete-button:hover {
 }
 
 /* Responsive Design */
-@media (max-width: 768px) {
+@media (max-width: 1000px) {
   #manageModal {
-      width: 90%;
+      width: 100%;
       height: 60%;
   }
 
@@ -692,14 +699,6 @@ button.delete-button:hover {
 
 
 
-
-/* Modal Content */
-.modal-content {
-  position: relative;
-  padding: 20px;
-  overflow-y: auto; /* scrolls when content exceeds height */
-}
-
 /* Close Button */
 .close {
   position: absolute;
@@ -707,12 +706,6 @@ button.delete-button:hover {
   top: 10px;
   font-size: 24px;
   cursor: pointer;
-}
-
-/* Centering the Heading */
-.modal-content h2 {
-  text-align: center;
-  margin-bottom: 15px;
 }
 
 /* Form Layout */
